--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@rljson/template-project",
+  "name": "@rljson/bs",
   "version": "0.0.18",
-  "description": "Rljson template-project description",
-  "homepage": "https://github.com/rljson/template-project",
-  "bugs": "https://github.com/rljson/template-project/issues",
+  "description": "Blob storage interface and implementations for rljson",
+  "homepage": "https://github.com/rljson/bs",
+  "bugs": "https://github.com/rljson/bs/issues",
   "private": false,
   "license": "MIT",
   "engines": {
@@ -11,16 +11,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rljson/template-project.git"
+    "url": "git+https://github.com/rljson/bs.git"
   },
-  "main": "dist/template-project.js",
+  "main": "dist/bs.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "type": "module",
   "scripts": {
-    "build": "pnpx vite build && tsc && node scripts/copy-readme-to-dist.js",
+    "build": "pnpx vite build && tsc && node scripts/copy-readme-to-dist.js && node scripts/deploy-conformance-tests.js",
     "test": "pnpx vitest run --coverage && pnpm run lint",
     "prebuild": "npm run test",
     "prepublishOnly": "npm run build",
@@ -28,30 +28,30 @@
     "updateGoldens": "cross-env UPDATE_GOLDENS=true pnpm test"
   },
   "devDependencies": {
-    "@types/node": "^24.10.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
-    "@vitest/coverage-v8": "^4.0.6",
+    "@types/node": "^25.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
+    "@vitest/coverage-v8": "^4.0.17",
     "cross-env": "^10.1.0",
-    "eslint": "^9.39.1",
-    "eslint-plugin-jsdoc": "^61.1.12",
-    "eslint-plugin-tsdoc": "^0.4.0",
-    "globals": "^16.5.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-jsdoc": "^62.0.0",
+    "eslint-plugin-tsdoc": "^0.5.0",
+    "globals": "^17.0.0",
     "jsdoc": "^4.0.5",
-    "read-pkg": "^9.0.1",
+    "read-pkg": "^10.0.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.3",
-    "vite": "^7.1.12",
-    "vite-node": "^3.2.4",
+    "typescript-eslint": "^8.53.0",
+    "vite": "^7.3.1",
+    "vite-node": "^5.2.0",
     "vite-plugin-dts": "^4.5.4",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.6",
+    "vite-tsconfig-paths": "^6.0.4",
+    "vitest": "^4.0.17",
     "vitest-dom": "^0.1.1"
   },
   "dependencies": {
-    "@rljson/hash": "^0.0.17",
-    "@rljson/json": "^0.0.22",
-    "@rljson/rljson": "^0.0.66"
+    "@rljson/hash": "^0.0.18",
+    "@rljson/json": "^0.0.23",
+    "@rljson/rljson": "^0.0.73"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
